apps/homelab/vaultwarden/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vaultwarden-ingress
  namespace: vaultwarden
  annotations:
    external-dns.kubernetes.io/hostname: vaultwarden.local.mariosl.dev
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    cert-manager.io/cluster-issuer: cert-manager-cluster-issuer
spec:
  ingressClassName: traefik
  rules:
    - host: vaultwarden.local.mariosl.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vaultwarden-helmrelease
                port:
                  number: 80
  tls:
    - hosts:
        - vaultwarden.local.mariosl.dev
      secretName: vaultwarden-local-mariosl-dev-tls
